--- a/style.css
+++ b/style.css
@@ -404,29 +404,29 @@ main {
     margin-bottom: 32px;
 }
 
-.app-features_section__list {
-    list-style-type: none;
-    margin: 0 auto;
-    padding: 0;
-}
-
 .list__item img {
     display: block;
     margin: 0 auto;
     margin-bottom: 30px;
 }
 
-.app-features_section__list{
+.list__item{
     margin: 0 auto;
 }
 
-.app-features_section__list .list__item h3{
+.app-features_section__description-around--container {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+}
+
+.app-features_section__container .list__item h3{
     text-align: center;
     margin: 0 auto;
     margin-bottom: 18px;
 }
 
-.app-features_section__list .list__item p {
+.app-features_section__container .list__item p {
     margin-bottom: 18px;
     text-align: center;
     margin: 0 auto;
@@ -506,10 +506,6 @@ main {
 
 .list__item--retina_ready_graphics {
     margin-bottom: 59px;
-}
-
-.list__item--people_support {
-    margin-top: 59px;
 }
 
 .list__item--main-img {
@@ -683,7 +679,8 @@ video {
     position: absolute;
     height: 215px;
     margin-top: 15px; 
-    z-index: 4; 
+    z-index: 4;
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
 }
 
 .slider.first, .slider.second {
@@ -694,7 +691,22 @@ video {
     right: -20px;
 }
 
-.our_happy_customers__sliders .main {
+.app_introduce_section__container {
+    display: flex;
+    flex-direction: column;
+}
+
+.about_our_app-section__flex-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.download_app_now_section__container {
+    display: flex;
+    flex-direction: column;
+}
+
+.slider.main {
     position: relative;
     z-index: 5;
     margin: 0 auto;
@@ -727,6 +739,18 @@ video {
     padding: 0;
     margin: 0 auto;
     list-style-type: none;
+    display: flex;
+    flex-direction: column;
+}
+
+.information_section__mail_and_number {
+    display: flex;
+    flex-direction: column;
+}
+
+.main_footer__flex-wrapper {
+    display: flex;
+    flex-direction: column;
 }
 
 .our_recent_blog__list .item {
